# LogicSim

./: .gitignore  Cargo.toml  README.md
android/: Cargo.toml  build.sh  run.sh  setup-compile.md  setup-compile.sh
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/logisim/android/: MainActivity.java
android/src/: lib.rs
common/: Cargo.toml
common/include/: atlas_data.rs  shader.wgsl  shader_minimal.wgsl  sim.wgsl
common/src/: app.rs  gpu.rs  input.rs  lib.rs  settings.rs
common/src/graphics/: atlas.rs  mod.rs  model.rs  renderer.rs  text.rs  ui.rs
common/src/sim/: mod.rs  save.rs  scene.rs
common/src/ui/: mod.rs  pages.rs  scene.rs
desktop/: Cargo.toml
desktop/src/: main.rs
web/: Cargo.toml  build.bat  build.sh
web/src/: lib.rs
