[workspace]
members = ["common", "desktop", "android", "web"]
resolver = "2"

[profile.release]
strip = "symbols"

# used by web/build.sh
[profile.web_release]
inherits = "release"
opt-level = 3
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
codegen-units = 1
lto = true
