[package]
name = "logisim-android"
version = "0.1.0"
edition = "2021"

[lib]
name = "main"
crate-type = ["cdylib"]

[dependencies]
logisim-common = { path = "../common" }
pollster = "0.2"
raw-window-handle = "0.5"
log = "0.4"
ndk = { version = "0.8", features = ["rwh_05"] }
ndk-sys = "0.5.0"
android-activity = { version = "0.5", features = ["game-activity"] }
jni = "0.21"
android-logd-logger = "0.2.1"
bincode = "1.3"
