[package]
name = "mlsim-android"
version = "0.1.0"
edition = "2021"

[lib]
name = "main"
crate-type = ["cdylib"]

[jano]
name = "Masons Logic Sim"
app_id = "com.mason.mlsim"
version = "1.0.0"
icon = "android/ic_launcher.png"

[dependencies]
mlsim-common = { path = "../common" }
jano = { git = "https://github.com/MasonFeurer/Jano.git", features = ["wgpu", "egui"] }
pollster = "0.3"
log = "0.4"
android-logd-logger = "0.2.1"
raw-window-handle = "0.6.2"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
