[package]
name = "logisim-common"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = { version = "0.25", features = ["serde"] }
wgpu = "0.18"
raw-window-handle = "0.5"
image = { version = "0.24", features = ["png"] }
log = "0.4"
fastrand = "2.0.1"
serde = { version = "1.0", features = ["derive"] }
