[package]
name = "logisim-common"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = { version = "0.25", features = ["serde"] }
wgpu = "0.20"
image = { version = "0.24", features = ["png"] }
log = "0.4"
fastrand = "2.0.1"
serde = { version = "1.0", features = ["derive"] }
egui = { version = "0.28", features = ["serde"] }
egui-wgpu = "0.28"
bytemuck = "1.16.1"
