[package]
name = "mlsim-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
mlsim-common = { path = "../common" }
winit = { version = "0.29.4", features = ["rwh_05"] }
pollster = "0.3"
env_logger = "0.10"
log = "0.4"
bincode = "1.3"
directories = "5.0"
egui-winit = "0.28"
serde = { version = "1.0", features = ["derive"] }
