[package]
name = "logisim-web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
logisim-common = { path = "../common" }
wgpu = { version = "0.18", features = ["webgl"] }
winit = { version = "0.29", features = ["rwh_05"] }

rfd = "0.12" # TODO: USE FOR IMPORTING SAVES
bincode = "1.3"

wasm-bindgen = "0.2"
wasm-bindgen-futures = "^0.4"
web-time = "0.2.4"
web-sys = { version = "^0.3", features = ["Navigator", "Window", "HtmlCanvasElement"] }
console_error_panic_hook = "0.1.7"
console_log = { version = "0.2", features = ["color"] }
